thanks to user barkbay for his persistence and help on this.

* Issue 247: POST_INITIALIZED_EVENT wasn't correctly handling an initially empty node.

* Issue 245: Auth info specified in the CuratorFrameworkFactory.Builder was not being re-set in cases
where the internal ZooKeeper handle was recreated. i.e. if the cluster has issues auth info would be lost.

1.3.1 - January 28, 2013
========================
* Tightened up a possible race deep inside the connection management.

* PathChildrenCache.rebuild() and PathChildrenCache.rebuildNode() were not handling deleted nodes.

* Issue 237: New feature. PathChildrenCache now optionally posts an event when the initial cache is
populated. To accommodate this behavior there is a new version of start() that takes an enum. See the
Javadoc for each value. For this new behavior, use StartMode.POST_INITIALIZED_EVENT. Once the cache
is initialized a PathChildrenCacheEvent.Type.INITIALIZED will be posted. Huge thanks to user philflesh
for the idea and co-implementation.

1.3.0 - January 10, 2013
========================
* MAJOR CHANGE (thus a version bump): I'd always thought that if the client is disconnected from the server
long enough then an Expired event would be generated. Testing, however, shows this not to be the case. I believe
it's related to ZOOKEEPER-1159. The behavior associated with this is that if the clients lost connection to the
cluster for longer than the session expiration they would _never_ be able to reconnect. The connection would
be permanently lost. Many users were seeing this as endless log messages indicating "Connection timed out
for connection...". As a workaround, in 1.3.0+ when the Curator state changes to LOST, a flag will be set
so that the next time Curator needs to get the ZooKeeper instance, the current instance will be closed and a new
ZooKeeper instance will be allocated (as if the session had expired).

* Added checks for illegal namespaces.
