@@ -10,6 +10,9 @@ thanks to user barkbay for his persistence and help on this.
 * Issue 245: Auth info specified in the CuratorFrameworkFactory.Builder was not being re-set in cases
 where the internal ZooKeeper handle was recreated. i.e. if the cluster has issues auth info would be lost.
 
+* The default watcher in the ZooKeeper handle is now cleared before the ZooKeeper handle is closed. This avoids
+an edge case where events meant for the old ZooKeeper handle get processed.
+
 1.3.1 - January 28, 2013
 ========================
 * Tightened up a possible race deep inside the connection management.
